page overflow x fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,5 +8,6 @@
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+    overflow-x: hidden;
   }
 }
